[package]
name = "void-id"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
getrandom = "0.1.14"
itertools = "0.9.0"

serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
